Bug 1343729 - Only collect IPC_SYNC_LATENCY_MS on the main thread. r=billm, a=lizzard

MozReview-Commit-ID: GtsujcVJNtW